<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="201dp"
        android:layout_height="50dp"
        android:layout_marginTop="92dp"
        android:text="@string/repair_order"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ordertype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="70dp"
        android:text="@string/order_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/technician"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/technician"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ordertype" />

    <TextView
        android:id="@+id/inspection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="40dp"
        android:text="@string/inspection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/technician" />

    <TextView
        android:id="@+id/paint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="40dp"
        android:text="@string/paint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspection" />

    <TextView
        android:id="@+id/parts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="40dp"
        android:text="@string/parts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paint" />

    <TextView
        android:id="@+id/labor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="40dp"
        android:text="@string/labor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parts" />

    <EditText
        android:id="@+id/ordertypetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/ordertype"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/subtotaltext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="24dp"
        android:text="@string/_0_00"
        app:layout_constraintBottom_toTopOf="@+id/taxtext"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginTop="20dp"
        android:text="@string/tax"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtotal" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginBottom="24dp"
        android:text="@string/total"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginBottom="112dp"
        android:text="@string/subtotal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/taxtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="24dp"
        android:text="@string/_0_00"
        app:layout_constraintBottom_toTopOf="@+id/totaltext"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/totaltext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="24dp"
        android:text="@string/_0_00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/techniciantext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/technician"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/inspectiontext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/inspection"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/labortext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/labor"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/partstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/parts"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/painttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/paint"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/submitbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginBottom="69dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>